fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ margin: 0;
   }
 
   .newsfeed {
-    height: 100%; /* 100% Full-height */
+    height: 110%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
